# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
src/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.cpp  material.hpp  ray.cpp  ray.hpp  raytracer.hpp  sphere.hpp  utils.hpp  vec3.hpp
